[package]
name = "wasmtime-dbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nothing = "0.1.12"
# git = "https://github.ufo.k0s.io/bytecodealliance/wasmtime"
wasmtime = { version = "15", default-features = false, features = ["cache","cranelift","parallel-compilation","pooling-allocator"] }
