[package]
name = "wasmtime-dbg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasmtime-dbg"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# git = "https://github.ufo.k0s.io/bytecodealliance/wasmtime"
wasmtime = { version = "15", default-features = false, features = ["cache","cranelift","parallel-compilation","pooling-allocator"] }
